GCCODA-42: had to add max-width to section to prevent it from overflowing on mobile

--- a/wp-open-data-toronto/style.css
+++ b/wp-open-data-toronto/style.css
@@ -31,6 +31,7 @@ Version:         1.2.0
      outline-color: #cccccc;
      outline-width: 2px
 }
+section{max-width: 100%;}
 /* COT Header */
  #super-header a:focus{
     outline-style: solid;
